feat: add interaction mode (tap or long press)

--- a/Sample/ContextView.Sample/ContextView.Sample/ContextView.Sample.csproj
+++ b/Sample/ContextView.Sample/ContextView.Sample/ContextView.Sample.csproj
@@ -21,6 +21,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Pages\ANyViewsPage.xaml.cs">
+      <DependentUpon>AnyViewsPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Pages\AnyViewsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\ListViewAllItemContextPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
