--- a/ContextView/Xamarin.ContextView/Xamarin.ContextView.csproj
+++ b/ContextView/Xamarin.ContextView/Xamarin.ContextView.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
+	<PackageVersion></PackageVersion>
+    <Title>Xamarin ContextView</Title>
+    <Authors>Gabriele Benvenuti</Authors>
+    <Description>Add a context menu to any Xamarin views</Description>
+    <PackageProjectUrl>https://github.com/CptPhenomeno/Xamarin.ContextView</PackageProjectUrl>
+    <PackageTags>xamarin, 'context view'</PackageTags>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageLicenseUrl>https://github.com/CptPhenomeno/Xamarin.ContextView/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageId>Xamarin.ContextView</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
